--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,142 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="./4geeks.ico" />
-  </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <script src="app.js"></script>
+
+</head>
+
+<body>
+<form>
+    <div class="tab-pane d-none d-flex justify-content-center my-4" id="pills-profile" role="tabpanel"
+        aria-labelledby="pills-profile-tab">
+        <div class="card" style="width: 95%">
+            <div style="border-bottom: 1px solid lightgray;"
+                class="d-flex justify-content-between align-items-baseline bg-light px-2 py-2">
+                <h2 class="ml-2 mr-2"> Payment form example</h2>
+            </div>
+            <div class="alert alert-danger mx-3 mt-4 mb-0" role="alert">Some fields are missing</div>
+
+            <div class="card-body p-3">
+                <div class="container-fluid p-0">
+                    <!-- Primer Row -->
+                    <div class="form-row">
+                        <div class="form-group col-md-5">
+                            <label for="inputcard">Card #</label>
+                            <input type="card" class="form-control" id="inputcard" placeholder="XXXXXXXXXXXXXXXX">
+                        </div>
+
+                        <div class="form-group col-md-2">
+                            <label for="inputcvc">#CVC</label>
+                            <input type="text" maxlength="4" class="form-control" id="inputcvc" placeholder="0000">
+                        </div>
+
+                        <div class="form-group col-md-5">
+                            <label for="inputamount">Amount</label>
+                            <div class="d-flex align-items-baseline">
+                                <span class="mr-1">$</span><input type="text" class="form-control" id="inputamount"
+                                    placeholder="Amount" width="100%">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Segundo Row -->
+
+
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputfirstname">First Name</label>
+                            <input type="text" class="form-control" id="inputfirstname" placeholder="">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="inputlastname">Last Name</label>
+                            <input type="text" class="form-control" id="inputlastname" placeholder="">
+                        </div>
+                    </div>
+
+                    <!-- Tercer Row -->
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputcity">City</label>
+                            <input type="text" class="form-control" id="inputcity" placeholder="">
+                        </div>
+
+
+                        <div class="form-group col-md-3">
+                            <label for="inputState">State</label>
+                            <input type="text" class="form-control" name="state" list="exampleList" id="inputstate"
+                                placeholder="Pick a state">
+                            <datalist id="exampleList">
+                                <option value="Spain">
+                                <option value="France">
+                                <option value="United States"></option>
+                                <option value="Canada"></option>
+                            </datalist>
+                        </div>
+
+                        <div class="form-group col-md-3">
+                            <label for="inputpostalcode">Postal Code</label>
+                            <input type="text" class="form-control" id="inputpostalcode" placeholder="">
+                        </div>
+                    </div>
+                    <!-- Cuarto Row -->
+                    <div class="form-row">
+                        <div class="form-group col-6">
+                            <label for="inputcity">We accept:</label>
+                            <div class="form-inline bg-secondary col-6 form-control input-lg col">
+                                <input type="radio" name="radius-card" value=""><i
+                                    class="fab fa-cc-mastercard bg-secondary text-white col"></i>
+                                <input type="radio" name="radius-card" value=""><i class="fab fa-cc-visa bg-secondary text-white col"></i>
+                                <input type="radio" name="radius-card"><i class="fab fa-cc-diners-club bg-secondary text-white col"></i>
+                                <input type="radio" name="radius-card"><i class="fab fa-cc-amex bg-secondary text-white col"></i>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-6">
+                            <div class="form-floating">
+                                <label for="form-control">Message</label>
+                                <textarea id="message" class="form-control"></textarea>
+                                <label for="form-control" class="h6 text-secondary mt-1">Add any notes here</label>
+
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Quinto Row -->
+
+                    <!-- botones -->
+
+
+
+                </div>
+            </div>
+            <div style="border-top: 1px solid lightgray;"
+                class="d-flex justify-content-end align-items-baseline bg-light px-2 py-2">
+                <div class="justify-content-end my-1">
+                    <input class="btn btn-primary m-1" type="submit" value="Send" id="button-send">
+                    <button type="button" class="btn btn-secondary">Cancel</button>
+                </div>
+            </div>
+        </div>
     </div>
-  </body>
-</html>
+    </form>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+        crossorigin="anonymous"></script>
+
+</body>
+
+</html
